src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Consumer__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <description>DO NOT EDIT THIS FIELD AT ALL</description>
        <label>Performance</label>
        <referenceTo>Performance__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <description>DO NOT EDIT THIS FIELD AT ALL</description>
        <label>Seat</label>
        <referenceTo>Seat__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consumer__c</columns>
        <columns>Cost__c</columns>
        <columns>Performance__c</columns>
        <columns>Seat__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforced_Security</fullName>
        <active>true</active>
        <description>Profile Security ensures this. However this validation rule makes it very clear while testing the User Interface.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;*UC-Ticket Sales Agent&apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
ISCHANGED( Status__c  )
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only sales or an administrator can update a ticket&apos;s status.</errorMessage>
    </validationRules>
</CustomObject>